--- a/app/css/styles.css
+++ b/app/css/styles.css
@@ -317,7 +317,9 @@ body {
 
 @media (min-width: 768px) and (max-width: 991px) {
   .container {
-    width: 750px; } }
+    width: 750px; }
+  .navbar .search input {
+    width: 390px; } }
 
 @media (min-width: 992px) and (max-width: 1199px) {
   .container {
